Master page works

--- a/src/Asin.Web/ClientApp/src/app/app.component.html
+++ b/src/Asin.Web/ClientApp/src/app/app.component.html
@@ -1,3 +1,4 @@
+<a target="_blank" href="https://www.notion.so/Full-stack-Engineering-Home-Project-197b19f9b951460ca0eed359d5acc93d">SPECIFICATION PROJET</a>
 <app-page>
   <router-outlet></router-outlet>
 </app-page>
