--- a/src/Asin.Web/ClientApp/src/app/components/page/page.component.scss
+++ b/src/Asin.Web/ClientApp/src/app/components/page/page.component.scss
@@ -2,10 +2,12 @@
     display: block;
 
     $margin: 20px;
+    $padding: 20px;
 
-    margin: $margin;
+    margin: $margin $margin $margin $margin;
+    padding: $padding;
     width: calc(100% - (#{$margin} * 2)) ;
-    height: calc(100% - (#{$margin} * 2)) ;
+    height: calc(90% - (#{$margin} * 2)) ;
     display: flex;
     justify-content: center;
 
