--- a/src/Asin.Web/ClientApp/src/app/container/asin-master/asin-master.component.scss
+++ b/src/Asin.Web/ClientApp/src/app/container/asin-master/asin-master.component.scss
@@ -1,3 +1,20 @@
-:host{
+:host {
     display: block;
+
+    @keyframes loading-animation {
+        0% {
+            opacity: 1;
+        }
+        50%{
+            opacity: 0.25;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+
+    .loading {
+        animation: loading-animation 1.5s ease-in-out;
+        animation-iteration-count: infinite;
+    }
 }
