--- a/src/Asin.Web/ClientApp/src/app/app.component.scss
+++ b/src/Asin.Web/ClientApp/src/app/app.component.scss
@@ -2,4 +2,13 @@
   display: block;
   height: 100%;
   width: 100%;
+
+  .menu{
+    font-size: 60px;
+    a{
+      margin-right: 10px;
+    }
+    margin-bottom: 20px;
+  }
+
 }
