--- a/src/Asin.Web/ClientApp/src/app/container/asin-master/asin-master.component.scss
+++ b/src/Asin.Web/ClientApp/src/app/container/asin-master/asin-master.component.scss
@@ -1,6 +1,12 @@
 :host {
     display: block;
 
+.form{
+    button{
+        margin-left: 10px;
+    }
+}
+
     @keyframes loading-animation {
         0% {
             opacity: 1;
