--- a/src/Asin.Web/ClientApp/src/app/components/page/page.component.scss
+++ b/src/Asin.Web/ClientApp/src/app/components/page/page.component.scss
@@ -7,10 +7,11 @@
     margin: $margin $margin $margin $margin;
     padding: $padding;
     width: calc(100% - (#{$margin} * 2)) ;
-    height: calc(90% - (#{$margin} * 2)) ;
+    min-height: calc(90% - (#{$margin} * 2)) ;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 
     border: 1px solid gray;
-    background-color: gray;
+    background-color: lightgray;
 }
