--- a/src/Asin.Web/ClientApp/src/app/container/asin-master/asin-master.component.html
+++ b/src/Asin.Web/ClientApp/src/app/container/asin-master/asin-master.component.html
@@ -1,27 +1,48 @@
-<div>
-    Ajouter un code ASIN:
-    <form>
-        <input name="asin" [(ngModel)]="asin" />
-        <button [disabled]="(asinsState$ | async) != STATE.Loaded" (click)="addAsin()">Ajouter</button>
-    </form>
+<div class="form">
+        <mat-form-field class="example-form-field">
+            <mat-label> Add an ASIN code</mat-label>
+            <input matInput type="text" [(ngModel)]="asin">
+            <button mat-button *ngIf="asin" matSuffix mat-icon-button aria-label="Clear" (click)="asin=''">
+              <mat-icon>close</mat-icon>
+            </button>
+          </mat-form-field>
+         
+        <button  mat-raised-button color="primary" [disabled]="(asinsState$ | async) != STATE.Loaded" (click)="addAsin()">Add</button>
+   
 </div>
+<br/>
 <div [ngSwitch]="(asinsState$ | async)">
     <div *ngSwitchCase="STATE.Loaded">
 
         <div *ngIf="(asins$ | async)?.length == 0;else elseBlock">
-            aucun éléments
+           no items
         </div>
         <ng-template #elseBlock>
-            <table>
-                <ng-container *ngFor="let item of asins$ | async">
-                    <tr>
-                        <td><a target="_blank"
-                                href="https://www.amazon.com/product-reviews/{{item.asin}}">{{ item.asin }}</a></td>
-                        <td>{{ item.title }}</td>
-                        <td [ngClass]="{loading: item.state == 1}">{{ asinLabels[item.state] }}</td>
-                    </tr>
+           
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+                <ng-container matColumnDef="asin">
+                  <th mat-header-cell *matHeaderCellDef> ASIN </th>
+                  <td mat-cell *matCellDef="let element">
+                      <a target="_blank" href="https://amazon.com/product-reviews/{{element.asin}}"> {{element.asin}} 
+                    </a>
+                      </td>
                 </ng-container>
-            </table>
+
+                <ng-container matColumnDef="title">
+                    <th mat-header-cell *matHeaderCellDef> PRODUCT TITLE </th>
+                    <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+                  </ng-container>
+
+                <ng-container matColumnDef="state">
+                    <th mat-header-cell *matHeaderCellDef> STATUS </th>
+                    <td mat-cell [ngClass]="{loading: element.state == 1}" *matCellDef="let element"> {{element.stateLabel}} </td>
+                  </ng-container>
+                            
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              </table>
+           
         </ng-template>
     </div>
 
