--- a/src/Asin.Web/ClientApp/src/app/container/customer-reviews/customer-reviews.component.html
+++ b/src/Asin.Web/ClientApp/src/app/container/customer-reviews/customer-reviews.component.html
@@ -1,11 +1,16 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table matSort (matSortChange)="sortData($event)" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
   <ng-container matColumnDef="asin">
-    <th class="col-title"  mat-header-cell *matHeaderCellDef> ASIN </th>
+    <th class="col-title"  mat-header-cell mat-sort-header *matHeaderCellDef> ASIN </th>
     <td class="col-title"  mat-cell *matCellDef="let element">
       <a target="_blank" href="https://amazon.com/product-reviews/{{element.asin}}"> {{element.asin}}
       </a>
     </td>
+  </ng-container>
+
+  <ng-container  matColumnDef="date">
+    <th mat-header-cell mat-sort-header *matHeaderCellDef> DATE </th>
+    <td mat-cell *matCellDef="let element"> {{element.date | date:'yyyy-MM-dd' }} </td>
   </ng-container>
 
   <ng-container matColumnDef="title">
@@ -19,10 +24,12 @@
   </ng-container>
 
   <ng-container matColumnDef="rating">
-    <th mat-header-cell *matHeaderCellDef> RATING </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> RATING </th>
     <td mat-cell *matCellDef="let element"> {{element.rating}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+<mat-paginator  (page)="pageEvent($event)" [length]="100000000"  [pageSize]="10">
+</mat-paginator>
